# GoogleCloudPlatform-_-dataplexutils

./: .gitignore  DATAPLEX_TESTING.md  LICENSE  README.md  build_install_package.sh  gemini.py  main.py  metadata_extraction.ipynb  package-lock.json  package.json  prompt.json  test_comments_api.py  test_dataplex_search.py  test_generation.ipynb  test_import_scan.py  test_lineage_errors.py  test_methods.py  test_review_operations.py  test_sample.py  tsconfig.json  user_journeys.md
PDF-ai-flask/: pdf.py
metadata/: metadata.py  v2_output.json
metadata_v2/: metadata_v2.py
notebooks/: metadata_wizard_demo.ipynb  test.py
pdf_ai_flask/: pdf.py  requirements.txt
src/api/: main.py
src/backend_apis/: DimPowerSource_table_description_prompt.json  DimSubstation_table_description_prompt.json  DimTime_table_description_prompt.json  DimTransmissionLine_table_description_prompt.json  Dockerfile  FactElectricityTransmission_table_description_prompt.json  build_deploy_cloud.sh  build_local.sh  cc_table_description_prompt.json  ccagg_table_description_prompt.json  crimes_table_description_prompt.json  main.py  requirements.txt  test_table_description_prompt.json
src/cli/: install_cli.sh  setup.py
src/cli/metadata_wizard_cli/: cli.py
src/frontend/metadata-manager-app/: build_local.sh  package-lock.json  package.json  tsconfig.json
src/frontend/metadata-manager-app/public/: index.html
src/frontend/metadata-manager-app/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx  reportWebVitals.ts  setupTests.ts  styles.css
src/frontend/metadata-manager-app/src/components/: TaskTracker.tsx
src/frontend/metadata-manager-app/src/contexts/: CacheContext.tsx  ReviewContext.tsx
src/frontend/metadata-wizard-app/: build_local.sh  package-lock.json  package.json
src/frontend/metadata-wizard-app/public/: index.html
src/frontend/metadata-wizard-app/src/: App.css  App.js  index.js  styles.css
src/package/: MANIFEST.in  build_install_package.sh  pyproject.toml
src/package/dataplexutils/metadata/: __init__.py  bigquery_operations.py  client.py  client_options.py  column_operations.py  constants.toml  dataplex_operations.py  deprecated_wizard.bak  prompt_manager.py  review_operations.py  table_operations.py  utils.py  version.py  wizard.py
templates/: details.html  generate.html  results.html  search.html
tests/: call_metadata_wizard.sh  cli_tests.py  conftest.py  integration_tests.py  launch_tests.sh  review_tests.py  test_generate_table_prompt.py  wizard_tests.py
(+28 files in other folders)
