[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dataplexutils_metadata_wizard"
authors = [
    {name = "Jakub Skuratowicz", email = "kubas@google.com"}

]
description = "Google Dataplex metadata automation using Generative AI"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas==2.2.2",
    "toml==0.10.2",
    "google-cloud-bigquery==3.21.0",
    "google-cloud-datacatalog==3.19.0",
    "google-cloud-datacatalog-lineage==0.3.6",
    "google-cloud-dataplex==1.13.0",
    "google-cloud-aiplatform>=1.48.0"

]